--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 16:05:03 2018</p>
+         Last Run: Wed Nov 21 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -58,7 +58,7 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>68</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>11</td>
                         <td>SSW</td>
@@ -173,7 +173,7 @@
                "data":[
                  "55",
                  "61",
-                 "68"
+                 "67"
                ]
              },
              {
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 16:05:03 2018</p>
+         Last Run: Wed Nov 21 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -246,15 +246,15 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>68</td>
-                        <td>1</td>
+                        <td>70</td>
+                        <td>0</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>66</td>
+                        <td>85</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -262,35 +262,35 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>5</td>
-                        <td>62</td>
-                        <td>1</td>
+                        <td>64</td>
+                        <td>0</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>62</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
                         <td>4</td>
-                        <td>59</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>58</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>0</td>
                         <td>-4</td>
-                        <td>4</td>
-                        <td>61</td>
+                        <td>5</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>46</td>
+                        <td>63</td>
                      </tr>
                   </tbody>
                </table>
@@ -395,7 +395,7 @@
                  "5",
                  "5",
                  "4",
-                 "4"
+                 "5"
                ]
              },
              {
@@ -404,10 +404,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
+                 "70",
+                 "64",
                  "62",
-                 "59",
-                 "61"
+                 "64"
                ]
              },
              {
@@ -416,10 +416,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "66",
-                 "62",
-                 "58",
-                 "46"
+                 "85",
+                 "79",
+                 "74",
+                 "63"
                ]
              }
            ]
@@ -459,7 +459,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 16:05:03 2018</p>
+         Last Run: Wed Nov 21 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -484,7 +484,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WNW</td>
@@ -496,11 +496,11 @@
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>52</td>
+                        <td>51</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WNW</td>
-                        <td>18</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -512,7 +512,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>WNW</td>
-                        <td>16</td>
+                        <td>15</td>
                      </tr>
                   </tbody>
                </table>
@@ -621,8 +621,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
-                 "52",
+                 "55",
+                 "51",
                  "50"
                ]
              },
@@ -633,8 +633,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "22",
-                 "18",
-                 "16"
+                 "17",
+                 "15"
                ]
              }
            ]
@@ -674,7 +674,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 16:05:03 2018</p>
+         Last Run: Wed Nov 21 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -696,10 +696,10 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Overcast</td>
-                        <td>-3</td>
-                        <td>-7</td>
+                        <td>-2</td>
+                        <td>-6</td>
                         <td>5</td>
-                        <td>78</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
@@ -715,7 +715,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>75</td>
+                        <td>76</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -723,11 +723,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>5</td>
-                        <td>78</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>70</td>
+                        <td>72</td>
                      </tr>
                   </tbody>
                </table>
@@ -754,7 +754,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-7",
+                 "-6",
                  "-6",
                  "-6"
                ]
@@ -766,7 +766,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-3",
+                 "-2",
                  "-2",
                  "-2"
                ]
@@ -836,9 +836,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
                  "77",
-                 "78"
+                 "77",
+                 "77"
                ]
              },
              {
@@ -848,8 +848,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "83",
-                 "75",
-                 "70"
+                 "76",
+                 "72"
                ]
              }
            ]
