--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 03:05:02 2018</p>
+         Last Run: Thu Nov 22 04:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>-2</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>74</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>6</td>
                         <td>S</td>
@@ -50,19 +50,19 @@
                         <td>1</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>71</td>
+                        <td>72</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>0</td>
-                        <td>-3</td>
+                        <td>-1</td>
+                        <td>-4</td>
                         <td>4</td>
-                        <td>64</td>
+                        <td>65</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>S</td>
-                        <td>64</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -70,11 +70,11 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>65</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>48</td>
+                        <td>50</td>
                      </tr>
                   </tbody>
                </table>
@@ -104,7 +104,7 @@
                "data":[
                  "-4",
                  "-4",
-                 "-3",
+                 "-4",
                  "-4"
                ]
              },
@@ -117,7 +117,7 @@
                "data":[
                  "-2",
                  "-1",
-                 "0",
+                 "-1",
                  "-1"
                ]
              }
@@ -188,10 +188,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "74",
+                 "73",
                  "68",
-                 "64",
-                 "65"
+                 "65",
+                 "66"
                ]
              },
              {
@@ -201,9 +201,9 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "78",
-                 "71",
-                 "64",
-                 "48"
+                 "72",
+                 "65",
+                 "50"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 03:05:02 2018</p>
+         Last Run: Thu Nov 22 04:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -264,7 +264,7 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>0</td>
                         <td>-3</td>
                         <td>2</td>
@@ -272,14 +272,14 @@
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>30</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
                         <td>2</td>
                         <td>0</td>
-                        <td>1</td>
+                        <td>2</td>
                         <td>50</td>
                         <td>1</td>
                         <td>8</td>
@@ -292,7 +292,7 @@
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>48</td>
+                        <td>49</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
@@ -395,7 +395,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "2",
-                 "1",
+                 "2",
                  "2"
                ]
              },
@@ -407,7 +407,7 @@
                "data":[
                  "54",
                  "50",
-                 "48"
+                 "49"
                ]
              },
              {
@@ -416,7 +416,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "30",
+                 "29",
                  "25",
                  "20"
                ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 03:05:02 2018</p>
+         Last Run: Thu Nov 22 04:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -495,7 +495,7 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>78</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
@@ -621,7 +621,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "77",
-                 "78",
+                 "79",
                  "80"
                ]
              },
@@ -634,6 +634,221 @@
                  "75",
                  "86",
                  "92"
+               ]
+             }
+           ]
+         };
+                  var options = {
+                     legend: {
+                         position: 'right'
+                     },
+                     scales: {
+                         xAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Date/Time', display: true},
+                             ticks: {
+                                 autoSkip: false
+                             }
+                         }],
+                         yAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Percentage (%)', display: true},
+                             ticks: {
+                                 beginAtZero: true
+                             }
+                         }]
+                     },
+                     tooltips: {
+                         mode: 'index'
+                     }
+                  };
+                  var MyNewChart = new Chart(ctx, {
+                     type: 'bar',
+                     data: data,
+                     options: options
+                  });
+               </script>
+         <hr style="border-width:5px ">
+      </div>
+      <div style="padding:10px;border: 1px none black">
+         <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
+         <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
+         Last Run: Thu Nov 22 04:05:07 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
+               <table class="table table-striped">
+                  <thead>
+                     <tr>
+                        <th>Forecast Time</th>
+                        <th>Summary</th>
+                        <th>Temperture (°C)</th>
+                        <th>Feels Like (°C)</th>
+                        <th>POP (%)</th>
+                        <th>Humidity (%)</th>
+                        <th>UV</th>
+                        <th>Wind (km/hr)</th>
+                        <th>Wind Dir.</th>
+                        <th>Cloud Cover (%)</th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     <tr>
+                        <td>09:00 PM</td>
+                        <td>Clear</td>
+                        <td>-3</td>
+                        <td>-6</td>
+                        <td>5</td>
+                        <td>84</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>SW</td>
+                        <td>24</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Clear</td>
+                        <td>-4</td>
+                        <td>-7</td>
+                        <td>5</td>
+                        <td>83</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>SW</td>
+                        <td>24</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 PM</td>
+                        <td>Clear</td>
+                        <td>-4</td>
+                        <td>-7</td>
+                        <td>6</td>
+                        <td>84</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>SW</td>
+                        <td>24</td>
+                     </tr>
+                  </tbody>
+               </table>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator7"></canvas></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+               <script>
+                  var ctx = document.getElementById("chartHTMLReportGenerator7").getContext("2d");
+                  var data ={
+           "labels":[
+             "09:00 PM",
+             "10:00 PM",
+             "11:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"apparentTemperature",
+               "borderColor":"rgba(92,0,141,1)",
+               "borderWidth":2,
+               "pointColor":"rgba(92,0,141,1)",
+               "backgroundColor":"rgba(92,0,141,0)",
+               "data":[
+                 "-6",
+                 "-7",
+                 "-7"
+               ]
+             },
+             {
+               "label":"temperature",
+               "borderColor":"rgba(252,49,18,1)",
+               "borderWidth":2,
+               "pointColor":"rgba(252,49,18,1)",
+               "backgroundColor":"rgba(252,49,18,0)",
+               "data":[
+                 "-3",
+                 "-4",
+                 "-4"
+               ]
+             }
+           ]
+         };
+                  var options = {
+                     legend: {
+                         position: 'right'
+                     },
+                     scales: {
+                         xAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Date/Time', display: true},
+                             ticks: {
+                                 autoSkip: false
+                             }
+                         }],
+                         yAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Temp (C)', display: true},
+                             ticks: {
+                                 beginAtZero: false
+                             }
+                         }]
+                     },
+                     tooltips: {
+                         mode: 'index'
+                     }
+                  };
+                  var MyNewChart = new Chart(ctx, {
+                     type: 'line',
+                     data: data,
+                     options: options
+                  });
+               </script>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator8"></canvas></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+               <script>
+                  var ctx = document.getElementById("chartHTMLReportGenerator8").getContext("2d");
+                  var data ={
+           "labels":[
+             "09:00 PM",
+             "10:00 PM",
+             "11:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"precipProbability",
+               "borderColor":"rgba(0,0,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(0,0,255,0.5)",
+               "data":[
+                 "5",
+                 "5",
+                 "6"
+               ]
+             },
+             {
+               "label":"humidity",
+               "borderColor":"rgba(40,177,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(40,177,255,0.5)",
+               "data":[
+                 "84",
+                 "83",
+                 "84"
+               ]
+             },
+             {
+               "label":"cloudCover",
+               "borderColor":"rgba(233,37,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(233,37,255,0.5)",
+               "data":[
+                 "24",
+                 "24",
+                 "24"
                ]
              }
            ]
