--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 05:05:07 2018</p>
+         Last Run: Thu Nov 22 06:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -60,9 +60,9 @@
                         <td>4</td>
                         <td>65</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>S</td>
-                        <td>66</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -74,7 +74,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>50</td>
+                        <td>49</td>
                      </tr>
                   </tbody>
                </table>
@@ -202,8 +202,8 @@
                "data":[
                  "87",
                  "76",
-                 "66",
-                 "50"
+                 "65",
+                 "49"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 05:05:07 2018</p>
+         Last Run: Thu Nov 22 06:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -267,24 +267,24 @@
                         <td>Clear</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>55</td>
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>29</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
                         <td>2</td>
                         <td>0</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>50</td>
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>25</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -296,7 +296,7 @@
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>20</td>
+                        <td>19</td>
                      </tr>
                   </tbody>
                </table>
@@ -394,8 +394,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "2",
+                 "1",
+                 "1",
                  "2"
                ]
              },
@@ -416,9 +416,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "29",
-                 "25",
-                 "20"
+                 "27",
+                 "24",
+                 "19"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 05:05:07 2018</p>
+         Last Run: Thu Nov 22 06:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -483,11 +483,11 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>77</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>75</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -495,23 +495,23 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>79</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>86</td>
+                        <td>88</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>-1</td>
-                        <td>-5</td>
+                        <td>-4</td>
                         <td>5</td>
-                        <td>80</td>
+                        <td>78</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SW</td>
-                        <td>92</td>
+                        <td>93</td>
                      </tr>
                   </tbody>
                </table>
@@ -540,7 +540,7 @@
                "data":[
                  "-4",
                  "-4",
-                 "-5"
+                 "-4"
                ]
              },
              {
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "75",
                  "77",
-                 "79",
-                 "80"
+                 "78"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "75",
-                 "86",
-                 "92"
+                 "78",
+                 "88",
+                 "93"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 05:05:07 2018</p>
+         Last Run: Thu Nov 22 06:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -694,39 +694,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>5</td>
-                        <td>84</td>
+                        <td>4</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>24</td>
+                        <td>42</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-4</td>
                         <td>-7</td>
                         <td>5</td>
-                        <td>84</td>
-                        <td>0</td>
-                        <td>8</td>
-                        <td>SW</td>
-                        <td>24</td>
-                     </tr>
-                     <tr>
-                        <td>11:00 PM</td>
-                        <td>Clear</td>
-                        <td>-4</td>
-                        <td>-7</td>
-                        <td>6</td>
                         <td>85</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>24</td>
+                        <td>42</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>-4</td>
+                        <td>-7</td>
+                        <td>5</td>
+                        <td>86</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>SW</td>
+                        <td>42</td>
                      </tr>
                   </tbody>
                </table>
@@ -824,9 +824,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "4",
                  "5",
-                 "5",
-                 "6"
+                 "5"
                ]
              },
              {
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "84",
-                 "84",
-                 "85"
+                 "86",
+                 "85",
+                 "86"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "24",
-                 "24",
-                 "24"
+                 "42",
+                 "42",
+                 "42"
                ]
              }
            ]
